@@ -56,8 +56,7 @@ class OrderTest {
     @Test
     void updateWithNewOrderBagsNullArgExceptionTest() {
         Order order = Order.builder().build();
-        List<OrderBag> bags = null;
-        assertThrows(NullPointerException.class, () -> order.updateWithNewOrderBags(bags));
+        assertThrows(NullPointerException.class, () -> order.updateWithNewOrderBags(null));
     }
 
     @Test
@@ -103,8 +102,8 @@ class OrderTest {
             OrderBag.builder().id(2L).build(),
             OrderBag.builder().id(3L).build()));
         order.updateWithNewOrderBags(bags);
-        order.removeOrderBag(bags.get(0));
-        bags.remove(bags.get(0));
+        order.removeOrderBag(bags.getFirst());
+        bags.remove(bags.getFirst());
 
         assertSame(previous, order.getOrderBags());
         assertNotSame(bags, order.getOrderBags());
